tests/fixtures/smoke-tests/syntax-error/tests/acceptance/some-test.js
import Ember from "ember";
import { test } from 'ember-qunit';
import startApp from '../helpers/start-app';
var App;

module('An Integration test', {
  setup: function() {
    App = startApp();
  },
  teardown: function() {
    Ember.run(App, App.destroy);
  }
});

test("Page contents", function() {
  expect(2);
  visit('/').then(function() {
    equal(find('.ember-application').length, 1, "Page contains application");
  });
});